--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+    implementation 'com.mikhaellopez:circularimageview:4.2.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
+
 }
