user_info UI done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.budgeting.estimated_monthly_expense"></activity>
+        <activity android:name=".views.auth.sign_in"></activity>
+        <activity android:name=".views.budgeting.estimated_monthly_expense" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -37,8 +38,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".views.auth.sign_up" />
-        <activity android:name=".views.auth.sign_in">
+        <activity android:name=".views.auth.sign_up">
+        </activity>
+        <activity android:name=".views.user_info.user_information">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
