--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
     implementation 'com.jaredrummler:material-spinner:1.3.1'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
 }
