--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".services.budgeting.manage_records">
-
+        <activity android:name=".views.auth.sign_in" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".views.auth.sign_in" />
         <activity android:name=".views.budgeting.estimated_monthly_expense" />
 
         <meta-data
@@ -48,11 +47,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".views.auth.sign_up"></activity>
         <activity android:name=".views.user_info.user_information">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
