--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.auth.sign_in" >
+        <activity android:name=".views.budgeting.manageBudget"></activity>
+        <activity android:name=".views.auth.sign_in">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".views.budgeting.estimated_monthly_expense" />
 
@@ -45,10 +45,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".views.auth.sign_up"></activity>
-        <activity android:name=".views.user_info.user_information">
-
-        </activity>
+        <activity android:name=".views.auth.sign_up" />
+        <activity android:name=".views.user_info.user_information"></activity>
     </application>
 
 </manifest>
