--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.budgeting.manageBudget"></activity>
+        <activity android:name=".views.recordkeeping.add_new_record"></activity>
+        <activity android:name=".views.recordkeeping.add_record" />
+        <activity android:name=".views.navigation.bottom_navigation" />
+        <activity android:name=".views.budgeting.manageBudget" />
         <activity android:name=".views.auth.sign_in">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,7 +49,7 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".views.auth.sign_up" />
-        <activity android:name=".views.user_info.user_information"></activity>
+        <activity android:name=".views.user_info.user_information" />
     </application>
 
 </manifest>
