--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.recordkeeping.record_keeping_frags"></activity>
+        <activity android:name=".views.wallet"></activity>
+        <activity android:name=".views.recordkeeping.record_keeping_frags" />
 
         <service
             android:name=".services.services"
