--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,8 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "com.google.android.gms:play-services-vision:20.1.0"
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'io.kommunicate.sdk:kommunicateui:2.0.4.1'
+    implementation 'com.github.hadiidbouk:ChartProgressBar-Android:2.0.6'
 
 }
